# service_monitor

./: LICENSE  README.md  pyproject.toml  tox.ini
src/service_monitor/client/: client.py  client_app.py  subscriber.py
src/service_monitor/server/: proxy.py  publisher.py  server.py
src/service_monitor/utils/: shared.py
tests/client/: test_client.py  test_subscriber.py
tests/server/: test_proxy.py  test_publisher.py  test_server.py
